data/derived/fa15/progs/unify/prog2066.ml.out
Characters 142-143:
  List.fold_left f base args;;
                 ^
Error: This expression has type int -> int -> int list
       but an expression was expected of type int -> int -> int
       Type int list is not compatible with type int 
